finish category api
