# src/routes/order.route.ts
@@ -1,9 +1,9 @@
 import { Router } from 'express';
-import { OrderController } from '@/controllers/order.controller';
+import { OrderController } from '@/controllers/orders.controller';
 import { CreateOrderDto } from '@/dtos/order.dto';
 import { Routes } from '@interfaces/routes.interface';
 import { ValidationMiddleware } from '@middlewares/validation.middleware';
-import { AdminCheckMiddleware, AuthMiddleware } from '@/middlewares/auth.middleware';
+import { AuthMiddleware } from '@/middlewares/auth.middleware';
 
 export class OrderRoute implements Routes {
   public path = '/orders';
