# src/server.ts
@@ -5,9 +5,10 @@ import { ValidateEnv } from '@utils/validateEnv';
 import { ProductRoute } from './routes/products.route';
 import { OrderRoute } from './routes/order.route';
 import { ReviewRoute } from './routes/review.route';
+import { CategoryRoute } from './routes/categories.route';
 
 ValidateEnv();
 
-const app = new App([new AuthRoute(), new UserRoute(), new ProductRoute(), new OrderRoute(), new ReviewRoute()]);
+const app = new App([new AuthRoute(), new UserRoute(), new ProductRoute(), new OrderRoute(), new ReviewRoute(), new CategoryRoute()]);
 
 app.listen();
